--- a/compose.yml
+++ b/compose.yml
@@ -4,3 +4,48 @@ services:
     ports:
       - "6333:6333"
       - "6334:6334"
+    networks:
+      - spring-ai
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus-config.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - spring-ai
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    networks:
+      - spring-ai
+    depends_on:
+      - prometheus # This line was incorrectly indented
+
+  jaeger: # This block was incorrectly indented and nested
+    image: jaegertracing/all-in-one:latest # Uses the combined collector and query service
+    container_name: jaeger
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    ports:
+      # UI port (accessible in browser)
+      - "16686:16686"
+      - "4317:4317"
+    networks:
+      - spring-ai
+    depends_on:
+      - prometheus
+
+networks:
+  spring-ai:
+    driver: bridge
+
+volumes:
+  grafana-storage:
