--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.ai.bedrock.converse.chat.options.model=${AWS_AI_MODEL}
 logging.level.org.springframework.ai.chat.client.advisor=debug
 logging.level.com.ai.robot=debug
 
-#Database Configurations
+#Database Configurations 
 ## H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:chatdb
@@ -41,3 +41,13 @@ spring.ai.vectorstore.qdrant.initialize-schema=true
 spring.ai.vectorstore.qdrant.host=localhost
 spring.ai.vectorstore.qdrant.port=6334
 spring.ai.vectorstore.qdrant.collection-name=aichat
+
+#Tavily
+app.tavily.api.hostname=https://api.tavily.com
+app.tavily.api.key=${TAVILY_API_KEY}
+
+#Actuator
+management.endpoints.web.exposure.include=health,metrics,prometheus
+
+opentelemetry.exporter.otlp.endpoint=http://localhost:4317
+management.tracing.sampling.probability=1.0
